# ChangeLog for schedule

*schedule-v7.4.0:
	Martin Väth <martin at mvath.de>:
	- Use timeout also when opening the socket (previously, e.g.
	  an iptables block could have caused a deadlock)
	- Use timeout also when sending
	- Use additional alarm protection when sending and receiving
	- Clarify description of --timeout on manpages
	- Improve negative test for SCHEDULE_REMAIN
	- openrc: Explicitly set timeout for stopping in conf.d

*schedule-v7.3.0:
	Martin Väth <martin at mvath.de>:
	- Improve security in provided systemd unit

*schedule-v7.2.2:
	Martin Väth <martin at mvath.de>:
	- Syntactic micro-optimizations
	- Allow server of v7.2.0

*schedule-v7.2.1:
	Martin Väth <martin at mvath.de>:
	- Fix "core dumped" message

*schedule-v7.2.0:
	Martin Väth <martin at mvath.de>:
	- Increase magic checksum for password verification to 496 bit
	  to be reasonably secure against DOS attacks with random data

*schedule-v7.1.1:
	Martin Väth <martin at mvath.de>:
	- Fix queuing of empty jobs

*schedule-v7.1.0:
	Martin Väth <martin at mvath.de>:
	- Fix loglevel severity 'warning'
	  Security fix! (DOS: let server finish without knowing the password)
	- Check for correct Server::Serverfuncs version
	- Let shell script run with set -u

*schedule-v7.0.5:
	Martin Väth <martin at mvath.de>:
	- Avoid redundant quoting in shell scripts

*schedule-v7.0.4:
	Martin Väth <martin at mvath.de>:
	- Fix start-stop-daemon usage for openrc

*schedule-v7.0.3:
	Martin Väth <martin at mvath.de>:
	- internal: prefer each() and array-loops over index bookkeeping

*schedule-v7.0.2:
	Martin Väth <martin at mvath.de>:
	- Support separate start/stop options for openrc

*schedule-v7.0.1:
	Martin Väth <martin at mvath.de>:
	- Use openrc-run instead of deprecated runscript

*schedule-v7.0.0:
	Martin Väth <martin at mvath.de>:
	- Support logging (to syslog as well as to file)
	- Use logging in startup scripts
	- require_order of options (regression from v6.3.1)
	- Bump all file versions to 7.0.0
