@@ -2,8 +2,8 @@
 # Copyright Martin Väth <martin@mvath.de>.
 # This is part of the schedule project.
 
-require 5.012;
-package ScheduleServer v7.0.0;
+BEGIN { require 5.012 }
+package ScheduleServer v7.5.0;
 
 use strict;
 use warnings;
@@ -26,8 +26,9 @@ use File::Spec ();
 use lib '/usr/share/schedule';
 use FindBin;
 if(($FindBin::Bin // '') ne '') {
-	use lib File::Spec->catdir($FindBin::Bin, File::Spec->updir(), 'lib');
-	use lib File::Spec->catdir($FindBin::Bin, 'lib');
+	use lib File::Spec->catdir($FindBin::Bin, File::Spec->updir(),
+		'share', 'schedule');
+	use lib File::Spec->catdir($FindBin::Bin, 'share', 'schedule');
 	use lib $FindBin::Bin
 }
 use Schedule::Connect ();
