@@ -3,8 +3,8 @@
 # Copyright Martin Väth <martin@mvath.de>.
 # This is part of the schedule project.
 
-require 5.012;
-package Schedule::Client::Iterator v7.0.0;
+BEGIN { require 5.012 }
+package Schedule::Client::Iterator v7.5.0;
 
 use strict;
 use warnings;
